[gd_scene load_steps=4 format=3 uid="uid://cbm161c1o0ys1"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_j708l"]
[ext_resource type="Texture2D" uid="uid://dovy8y1c5ekan" path="res://Assets/icons/playlist-add.svg" id="2_qqt6w"]
[ext_resource type="Texture2D" uid="uid://dx6cvx1rptw15" path="res://Assets/icons/plus.svg" id="3_svo3q"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j708l")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Buttons" type="FlowContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2

[node name="NewList" type="Button" parent="PanelContainer/CenterContainer/Buttons"]
layout_mode = 2
theme_override_constants/icon_max_width = 36
theme_override_font_sizes/font_size = 25
text = "New List"
icon = ExtResource("2_qqt6w")

[node name="NewListPanel" type="FlowContainer" parent="PanelContainer/CenterContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/CenterContainer/NewListPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Set The New List Name:"

[node name="NewListName" type="LineEdit" parent="PanelContainer/CenterContainer/NewListPanel"]
layout_mode = 2
placeholder_text = "Put List Name here"
alignment = 1
max_length = 30
expand_to_text_length = true

[node name="Create" type="Button" parent="PanelContainer/CenterContainer/NewListPanel"]
layout_mode = 2
theme_override_constants/icon_max_width = 36
theme_override_font_sizes/font_size = 25
text = "Create"
icon = ExtResource("3_svo3q")

[connection signal="pressed" from="PanelContainer/CenterContainer/Buttons/NewList" to="." method="_on_new_list_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/NewListPanel/Create" to="." method="_on_create_pressed"]
